# ansiterm

./: .gitignore  README.md  generate_banners.py  pyproject.toml
ansiterm/: __init__.py  analyze.py  builder.py  cli.py  parser.py  render.py  sauce.py
tests/: test_builder.py  test_parser.py  test_sauce.py
