[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansiterm"
version = "1.0.0"
description = "Python library for rendering and authoring 90s-style ANSI (.ANS) art in terminals"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amplifier Team"}
]
keywords = ["ansi", "bbs", "terminal", "art", "cp437", "sauce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Terminals",
]

dependencies = []

[project.optional-dependencies]
windows = ["colorama>=0.4.6"]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier"
Repository = "https://github.com/microsoft/amplifier"

[project.scripts]
ansi-view = "ansiterm.cli:view_main"
ansify = "ansiterm.cli:ansify_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
